---
source: src/tests/audit_as_crates_io.rs
expression: output
---
  × There are some issues with your policy.audit-as-crates-io entries

Error: 
  × Some non-crates.io-fetched packages match published crates.io versions
  │   firstA:10.0.0
  │   firstAB:10.0.0
  │   firstB:10.0.0
  │   firstB-nodeps:10.0.0
  help: Add a `policy.*.audit-as-crates-io` entry for them

Error: 
  × some audit-as-crates-io packages don't match published crates.io versions
  │   rootA:10.0.0
  │   rootB:10.0.0
  help: Remove the audit-as-crates-io entries or make them `false`
